--- a/index.html
+++ b/index.html
@@ -5,42 +5,33 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
+
 	<link rel="stylesheet" type="text/css" href="css/estilo.css"> <!-- Gem style -->
 	<link rel="stylesheet" type="text/css" href="css/orbita.css">
+
+	
+
 	<title>MyBazz Easy</title>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="js/main.js"></script> <!-- Gem jQuery -->
-	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 
 
+	
 </head>
-<body class="foo">
+<body>
 
-	<div class="container">
-		<header>
-			<div id="logo"><a href="#"><img src="img/loja.png" alt="Homepag"></a></div>
-
-
-			<div id="cd-hamburger-menu"><a class="cd-img-replace" href="#0">Menu</a></div>
-		</header>
-
-		<nav id="main-nav">
-			<ul>
-				<li><a href="index.html" class="cool-link"><i class="fab fa-fort-awesome"></i> Home</a></li>
-				<li><a href="lojas.html" class="cool-link"><i class="fas fa-store"></i> Lojas</a></li>
-				<li><a href="passeio.html" class="cool-link"><i class="fas fa-shoe-prints"></i> Passeio</a></li>
-				<li><a href="#" class="cool-link"><i class="fas fa-handshake"></i> Contato</a></li>
-				<li style="float: right;"><a href="login/logcad.html" class="cool-link"><i class="fas fa-sign-in-alt"></i> Logar|Cadastrar</a>
-				</li>
-		</ul>
-			<ul>
-			</ul>
-		</nav>
-
-		<div class="background">
-
+	<header>
+		<div id="navbar">
+			<nav>
+				<div class="logo">
+					<img src="img/loja.png" title="MyBazz"></div>
+					<ul>
+						<li><a href="index.html" class="color"><i class="fab fa-fort-awesome"></i> Home</a></li>
+						<li><a href="Lojas.html" class="color"><i class="fas fa-store"></i> Lojas</a></li>
+						<li><a href="passeio.html" class="color"><i class="fas fa-shoe-prints"></i> Passeio</a></li>
+						<li><a href="#" class="color"><i class="fas fa-handshake"></i> Contato</a></li>
+						<li><a href="login/logcad.html" class="active"><i class="fas fa-sign-in-alt"></i> Log|Cad</a></li>
+					</ul>
+				</nav>
+			</div>
 			<div id="orbit" class="ellipse-container">
 
 				<h2 class="greeting">mybazz</h2>
@@ -54,12 +45,11 @@
 				<div class="ellipse ellipse__outer--thick"></div>
 
 			</div>
+		</header>
 
-		</div>
-		
-		 <button class="button"> HOME</button>
-		
-		<div class="row">
+		<button class="button"> HOME</button>
+
+		<div class="Interface">
 			<div id="conteudo-1" class="main-conteudo">
 				<h2>INTRO</h2>
 			</br>
@@ -68,59 +58,62 @@
 			<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 			<br>
 			<h2>TITLE HEADING</h2>
-			
-			<div class="fakeimg" style="height:200px;">Image</div>
-			<p>Some text..</p>
-			<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-			</div>
 
-			<div id="conteudo-2" class="main-conteudo">
-			<h2>PRODUTOS</h2>
-			</br>
-			<div class="fakeimg" style="height:200px;">Imagem</div>
-			<p>Some text..</p>
-			<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-			<br>
-			<h2>TITLE HEADING</h2>
-			
 			<div class="fakeimg" style="height:200px;">Image</div>
 			<p>Some text..</p>
 			<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-			</div>
-
-			<div id="conteudo-3" class="main-conteudo">
-			<h2>LOJAS</h2>
-			</br>
-			<div class="fakeimg" style="height:200px;">Imagem</div>
-			<p>Some text..</p>
-			<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-			<br>
-			<h2>TITLE HEADING</h2>
-			
-			<div class="fakeimg" style="height:200px;">Image</div>
-			<p>Some text..</p>
-			<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-			</div>
-
-			<div id="conteudo-4" class="main-conteudo">
-			<h2>LOJAS</h2>
-			</br>
-			<div class="fakeimg" style="height:200px;">Imagem</div>
-			<p>Some text..</p>
-			<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-			<br>
-			<h2>TITLE HEADING</h2>
-			
-			<div class="fakeimg" style="height:200px;">Image</div>
-			<p>Some text..</p>
-			<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-			</div>
 		</div>
 
-		<!-- Footer -->
-		<footer id="rodape" class="footer"> 
-			<p>Rodapé/Contato</p> 
-		</footer>
+		<div id="conteudo-2" class="main-conteudo">
+			<h2>PRODUTOS</h2>
+		</br>
+		<div class="fakeimg" style="height:200px;">Imagem</div>
+		<p>Some text..</p>
+		<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+		<br>
+		<h2>TITLE HEADING</h2>
+
+		<div class="fakeimg" style="height:200px;">Image</div>
+		<p>Some text..</p>
+		<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 	</div>
+
+	<div id="conteudo-3" class="main-conteudo">
+		<h2>LOJAS</h2>
+	</br>
+	<div class="fakeimg" style="height:200px;">Imagem</div>
+	<p>Some text..</p>
+	<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+	<br>
+	<h2>TITLE HEADING</h2>
+
+	<div class="fakeimg" style="height:200px;">Image</div>
+	<p>Some text..</p>
+	<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+</div>
+
+<div id="conteudo-4" class="main-conteudo">
+	<h2>LOJAS</h2>
+</br>
+<div class="fakeimg" style="height:200px;">Imagem</div>
+<p>Some text..</p>
+<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+<br>
+<h2>TITLE HEADING</h2>
+
+<div class="fakeimg" style="height:200px;">Image</div>
+<p>Some text..</p>
+<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+</div>
+</div>
+
+<!-- Footer -->
+<footer id="rodape" class="footer"> 
+	<p>Rodapé</p> 
+
+</footer>
+</div>
+
+
 </body>
 </html>
