passeio ou loja?

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="pt-br" class="no-js">
 <head>
-	<link rel="shortcut icon" type="image/x-png" href="img/loja.png">
+	<link rel="shortcut icon 2x" type="image/x-png" href="loja.png">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
 
 	<link rel="stylesheet" type="text/css" href="css/estilo.css"> <!-- Gem style -->
 	<link rel="stylesheet" type="text/css" href="css/orbita.css">
@@ -28,7 +28,7 @@
 						<li><a href="Lojas.html" class="color"><i class="fas fa-store"></i> Lojas</a></li>
 						<li><a href="passeio.html" class="color"><i class="fas fa-shoe-prints"></i> Passeio</a></li>
 						<li><a href="#" class="color"><i class="fas fa-handshake"></i> Contato</a></li>
-						<li><a href="login/logcad.html" class="active"><i class="fas fa-sign-in-alt"></i> Log|Cad</a></li>
+						<li><a href="login/login.html" class="active"><i class="fas fa-sign-in-alt"></i> Log|Cad</a></li>
 					</ul>
 				</nav>
 			</div>
