--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="pt-br" class="no-js">
 <head>
-	<link rel="shortcut icon 2x" type="image/x-png" href="loja.png">
+	<link rel="shortcut icon 2x" type="image/x-png" href="img/loja.png">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
@@ -17,21 +17,11 @@
 	
 </head>
 <body>
+	<div id="pagina1">
+		<header>
+			<button class="btn active" title="Login & Cadastro"><a href="login/logcad.html">Log|Cad</a></button>
 
-	<header>
-		<div id="navbar">
-			<nav>
-				<div class="logo">
-					<img src="img/loja.png" title="MyBazz"></div>
-					<ul>
-						<li><a href="index.html" class="color"><i class="fab fa-fort-awesome"></i> Home</a></li>
-						<li><a href="Lojas.html" class="color"><i class="fas fa-store"></i> Lojas</a></li>
-						<li><a href="passeio.html" class="color"><i class="fas fa-shoe-prints"></i> Passeio</a></li>
-						<li><a href="#" class="color"><i class="fas fa-handshake"></i> Contato</a></li>
-						<li><a href="login/login.html" class="active"><i class="fas fa-sign-in-alt"></i> Log|Cad</a></li>
-					</ul>
-				</nav>
-			</div>
+
 			<div id="orbit" class="ellipse-container">
 
 				<h2 class="greeting">mybazz</h2>
@@ -47,7 +37,14 @@
 			</div>
 		</header>
 
-		<button class="button"> HOME</button>
+		<nav class="skew-menu">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="lojas.html">Lojas</a></li>
+				<li><a href="passeio.html">Passeio</a></li>
+				<li><a href="#">Contato</a></li>
+			</ul>
+		</nav>
 
 		<div class="Interface">
 			<div id="conteudo-1" class="main-conteudo">
@@ -109,10 +106,21 @@
 
 <!-- Footer -->
 <footer id="rodape" class="footer"> 
-	<p>Rodapé</p> 
+	<p>Copyright <i class="far fa-copyright"></i> MyBazz Easy 2018</p> 
 
 </footer>
+
+<!-- Back-To-Top Button -->
+<div class='to-top' title="Back Top">
+	<a class='back-to-top ion-chevron-up' href='#'><i class="fas fa-hand-pointer"></i></a>
 </div>
+
+</div>
+
+
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+<script src="js/back.js"></script>
 
 
 </body>
