--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 <body>
 	<div id="pagina1">
 		<header>
-			<button class="btn active" title="Login & Cadastro"><a href="login/logcad.html">Log|Cad</a></button>
-
+			<div class="button" title="Login & Cadastro">
+				<a href="login/logcad.html">LOG | CAD</a>
+			</div>
 
 			<div id="orbit" class="ellipse-container">
 
@@ -105,10 +106,15 @@
 </div>
 
 <!-- Footer -->
-<footer id="rodape" class="footer"> 
-	<p>Copyright <i class="far fa-copyright"></i> MyBazz Easy 2018</p> 
+<div class="footer"> 
+	 
+    <a href="#" id="facebook">Facebook</a>
+    <a href="#" id="twitter">Twitter</a>
+    <a href="#" id="google">Google+</a>
 
-</footer>
+	<p id="copy">Copyright <i class="far fa-copyright"></i> MyBazz Easy 2018</p> 
+
+</div>
 
 <!-- Back-To-Top Button -->
 <div class='to-top' title="Back Top">
