--- a/passeio.html
+++ b/passeio.html
@@ -47,37 +47,27 @@
 <div class='container'>
 
       <div class='example relative'>
-        <div class='item'><img src='img/jaqueta.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
-       <div class='item'><img src='img/jaquetafem2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
-       <div class='item'><img src='img/jaqueta3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
+        <div class='item'><img src='img/jaqueta.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+       <div class='item'><img src='img/jaquetafem2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+       <div class='item'><img src='img/jaqueta3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
       </div>
     </div>
    <h1 id="tipo">Portfólio</h1>
 
     <div class='container'>
       <div class='example absolute'>
-        <div class='item'><img src='img/sapato.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
-        <div class='item'><img src='img/sapato2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
-         <div class='item'><img src='img/sapato3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
+        <div class='item'><img src='img/sapato.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+        <div class='item'><img src='img/sapato2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+         <div class='item'><img src='img/sapato3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
       </div>
     </div>
 <h1 id="tipo">Portfólio</h1>
 
     <div class='container'>
       <div class='example fixed'>
-        <div class='item'><img src='img/vestido.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
-        <div class='item'><img src='img/camisa2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
-        <div class='item'><img src='img/vestido3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
-      </div>
-    </div>
-
-<h1 id="tipo">Portfólio</h1>
-
-    <div class='container'>
-      <div class='example fixed'>
-        <div class='item'><img src='img/camisa.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
-        <div class='item'><img src='img/calca2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
-        <div class='item'><img src='img/camisa2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
+        <div class='item'><img src='img/vestido.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+        <div class='item'><img src='img/camisa2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+        <div class='item'><img src='img/vestido3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
       </div>
     </div>
 
@@ -85,16 +75,33 @@
 
     <div class='container'>
       <div class='example fixed'>
-        <div class='item'><img src='img/tenis.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
-        <div class='item'><img src='img/tenis2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
-        <div class='item'><img src='img/tenis3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><a href="">Link</a></div></div>
+        <div class='item'><img src='img/camisa.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+        <div class='item'><img src='img/calca2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+        <div class='item'><img src='img/camisa2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
       </div>
     </div>
+
+<h1 id="tipo">Portfólio</h1>
+
+    <div class='container'>
+      <div class='example fixed'>
+        <div class='item'><img src='img/tenis.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+        <div class='item'><img src='img/tenis2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+        <div class='item'><img src='img/tenis3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+      </div>
+    </div>
+
 
 <!-- Footer -->
-<footer id="rodape" class="footer"> 
-	<p>Copyright <i class="far fa-copyright"></i> MyBazz Easy 2018</p> 
-</footer>
+<div class="footer"> 
+     
+    <a href="#" id="facebook">Facebook</a>
+    <a href="#" id="twitter">Twitter</a>
+    <a href="#" id="google">Google+</a>
+
+    <p id="copy">Copyright <i class="far fa-copyright"></i> MyBazz Easy 2018</p> 
+
+</div>
 
 <!-- Back-To-Top Button -->
 <div class='to-top' title="Back Top">
